--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -25,12 +25,13 @@
     "\n",
     "Within this markdown cell, copy the line of text you used to import the data from your Terminal. This way, future analysts will be able to repeat your process.\n",
     "\n",
-    "e.g.: Import the dataset with `YOUR IMPORT TEXT HERE`"
+    "e.g.: Import the dataset with `$ mongoimport --db businessDB --collection establishments --file \"establishments.json\" --jsonArray\r\n",
+    "`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,33 +54,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7f9ececa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Databases: ['admin', 'businessDB', 'classDB', 'config', 'epa', 'local', 'met', 'travel_db']\n"
+     ]
+    }
+   ],
    "source": [
-    "# confirm that our new database was created\n"
+    "# confirm that our new database was created\n",
+    "print(\"Databases:\", mongo.list_database_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "71e373c1",
+   "execution_count": 7,
+   "id": "d3d29731-4d46-4d42-9cf6-8e8f156b85e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assign the uk_food database to a variable name\n",
-    "db = mongo['uk_food']"
+    "# Assign the uk_food database to a variable name\n",
+    "db = mongo['uk_food']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef1b89ed",
+   "execution_count": 9,
+   "id": "5a661aaa-cd3a-47f1-99d8-711ff09d61cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collections in 'uk_food' database: []\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "collections = db.list_collection_names()\n",
+    "print(\"Collections in 'uk_food' database:\", collections)"
    ]
   },
   {
@@ -339,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
